--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             
             <textarea  id="textoArea" name="textoArea" rows="4" cols="50" placeholder="Ingrese el texto aqui"></textarea>
             <div class="iconos">
-                <p class="warning"><img class="icono" src="/img/bi_exclamation-circle-fill.png" alt="">Solo letras minúsculas y sin acentos</p>
+                <p class="warning"><img class="icono" src="./img/bi_exclamation-circle-fill.png" alt="">Solo letras minúsculas y sin acentos</p>
             </div>
             <div class="botones">
                 <button class="enctrypt" onclick="Codificar()">Encriptar</button>
@@ -28,7 +28,7 @@
         </div>
 
         <div class="texto" id="texto">
-            <img src="/img/Muñeco.png" class="muneco" alt=""  id="muneco">
+            <img src="./img/Muñeco.png" class="muneco" alt=""  id="muneco">
             <div class="textoArea" id="texto2">
                 <h1 class="titulo" id="titulo">Ningun mensaje fue encontrado</h1>
                 <p class="parrafo" id="parrafo">Ingresa el texto que deseas encriptar o desencriptar</p>
